<resources>
    <string name="app_name">CookingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CookingApp">CookingApp</string>
    <string name="dish_category">dish_category</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="delete_category">Delete this category</string>
    <string name="dish_name">Dish name</string>
    <string name="preparation_time">10</string>
    <string name="choose_preparation_time">"?"</string>
    <string name="choose_image">Choose photo</string>
    <string name="ready">Ready</string>
    <string name="enter_dish_name">Enter dish name</string>
    <string name="ingredients">Ingredients:</string>
    <string name="preparing">Preparing:</string>
    <string name="enter_new_ingredient">Enter new ingredient</string>
    <string name="enter_next_step">Enter next step</string>
    <string name="create_shopping_list">create shopping list</string>
    <string name="ingredient">ingredient</string>
    <string name="step_number">1</string>
    <string name="step_description">step description</string>
    <string name="shopping_list">Shopping List</string>
    <string name="choose_all_ingredients">choose all</string>
    <string name="cook">Cook</string>
    <string name="delete_dish">Delete \n this dish</string>
    <string name="edit_dish">Edit it</string>
    <string name="choose_preparation_time_dialog_title">Choose time</string>
    <string name="choose_preparation_time_dialog_message">in minutes:</string>
    <string name="add">Add</string>
    <string name="delete_photo">Delete photo</string>
    <string name="enter_step">Enter step</string>
    <string name="shopping_list_notification_service_description">This provides notification with your\'s shopping list</string>
    <string name="shopping_list_notification">Shopping list notification</string>

    <string name="categories">Categories</string>
    <string name="delete_category_dialog_message">Are you sure you would like to delete this category?</string>
    <string name="add_new_category">Add new category</string>
    <string name="change_category_name">Change category name</string>
</resources>