<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.DishFragment">

    <ImageButton
        android:id="@+id/back_to_dish_list_from_dish_imageButton"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:backgroundTintMode="screen"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/preparation_time_imageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_clock_24" />

    <ImageView
        android:id="@+id/dish_photo_imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparation_time_textView" />

    <TextView
        android:id="@+id/preparation_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/preparation_time"
        app:layout_constraintEnd_toEndOf="@+id/preparation_time_imageView"
        app:layout_constraintStart_toStartOf="@+id/preparation_time_imageView"
        app:layout_constraintTop_toBottomOf="@+id/preparation_time_imageView" />

    <TextView
        android:id="@+id/dish_name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dish_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dish_photo_imageView"
        app:layout_constraintEnd_toStartOf="@+id/preparation_time_imageView"
        app:layout_constraintStart_toEndOf="@+id/back_to_dish_list_from_dish_imageButton"
        app:layout_constraintTop_toBottomOf="@+id/back_to_dish_list_from_dish_imageButton" />

    <TextView
        android:id="@+id/ingredients_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish_photo_imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_textView" />

    <TextView
        android:id="@+id/preparation_steps_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preparing"
        app:layout_constraintStart_toStartOf="@+id/ingredients_textView"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/preparation_steps_recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparation_steps_textView" />

    <Button
        android:id="@+id/shopping_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>