<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_table_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_to_dish_list_from_change_dish_imageButton"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:backgroundTint="#99FFFFFF"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/preparation_time_picker_imageView"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_twotone_access_time_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/preparation_time_add_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/choose_preparation_time"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/preparation_time_picker_imageView"
                app:layout_constraintStart_toStartOf="@+id/preparation_time_picker_imageView"
                app:layout_constraintTop_toBottomOf="@+id/preparation_time_picker_imageView" />

            <EditText
                android:id="@+id/enter_dish_name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enter_dish_name"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preparation_time_add_textView" />

            <ImageView
                android:id="@+id/dish_photo_imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_dish_name_editText"
                app:srcCompat="@drawable/empty_plate_graphic"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/choose_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/choose_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/delete_photo_button"
                app:layout_constraintTop_toBottomOf="@+id/dish_photo_imageView" />

            <Button
                android:id="@+id/ready_dish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ready"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_preparation_step_button" />

            <TextView
                android:id="@+id/ingredients_add_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_photo_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_add_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_add_textView"
                tools:listitem="@layout/item_dish_ingredients"/>

            <TextView
                android:id="@+id/preparation_steps_add_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/preparing"
                app:layout_constraintStart_toStartOf="@+id/ingredients_add_textView"
                app:layout_constraintTop_toBottomOf="@+id/add_ingredient_editText" />

            <EditText
                android:id="@+id/add_ingredient_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/enter_new_ingredient"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toStartOf="@+id/add_ingredient_button"
                app:layout_constraintStart_toStartOf="@+id/ingredients_add_textView"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_add_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/preparation_steps_add_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preparation_steps_add_textView"
                tools:listitem="@layout/item_dish_steps"/>

            <EditText
                android:id="@+id/add_preparation_step_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/enter_next_step"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toStartOf="@+id/add_preparation_step_button"
                app:layout_constraintStart_toStartOf="@+id/preparation_steps_add_textView"
                app:layout_constraintTop_toBottomOf="@+id/preparation_steps_add_recyclerView" />

            <Button
                android:id="@+id/add_ingredient_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="@+id/add_ingredient_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_ingredient_editText" />

            <Button
                android:id="@+id/add_preparation_step_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="@+id/add_preparation_step_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_preparation_step_editText" />

            <Button
                android:id="@+id/delete_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/delete_photo"
                app:layout_constraintBottom_toBottomOf="@+id/choose_photo_button"
                app:layout_constraintEnd_toStartOf="@+id/choose_photo_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/choose_photo_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>